--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -1,10 +1,10 @@
 on:
   push:
     branches:
-      - main
+      - feature/cicd
   pull_request:
     branches:
-      - main
+      - feature/cicd
 jobs:
   build:
     runs-on: ubuntu-latest #??
