--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -7,9 +7,11 @@ on:
       - feature/cicd
 jobs:
   build:
-    runs-on: ubuntu-latest #??
+    runs-on: [self-hosted, build]
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Run a one-line script
       run: echo 'dziala'
+
+      
