--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -12,6 +12,6 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Run a one-line script
-      run: echo 'dziala'
+      run: ls
 
       
