--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -5,6 +5,10 @@ on:
   pull_request:
     branches:
       - feature/cicd
+
+env:
+  IMAGE_NAME: sigmaproductions/sigmachatserver
+
 jobs:
   build:
     runs-on: [self-hosted, build]
@@ -16,5 +20,20 @@ jobs:
         appsettings: ${{ secrets.appsettings }}
       run: |
         echo "$appsettings" > appsettings.json && cat appsettings.json
-
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag ${IMAGE_NAME}:$(date +%s)
+    - name: Publish the Docker image
+      run: docker push ${IMAGE_NAME}:$(date +%s)
+  deploy:
+    runs-on: [self-hosted, zdechlak]
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: dziala
+      run: echo 'dziala'
       
