--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ variables.DOCKERHUB_USERNAME }}
+        username: ${{ env.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag ${IMAGE_NAME}:${IMAGE_TAG}
