--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -8,7 +8,6 @@ on:
 
 env:
   IMAGE_NAME: sigmaproductions/sigmachatserver
-  IMAGE_TAG: $(date +%s)
 
 jobs:
   build:
@@ -27,9 +26,9 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${IMAGE_NAME}:${IMAGE_TAG}
+      run: docker build . --file Dockerfile --tag ${IMAGE_NAME}
     - name: Publish the Docker image
-      run: docker push ${IMAGE_NAME}:${IMAGE_TAG}
+      run: docker push ${IMAGE_NAME}:$(date +%s)
   deploy:
     runs-on: [self-hosted, zdechlak]
     steps:
