--- a/.github/workflows/checkout.yaml
+++ b/.github/workflows/checkout.yaml
@@ -13,6 +13,9 @@ jobs:
   build:
     runs-on: [self-hosted, build]
     steps:
+    - name: Set current time
+      run: |
+        echo "IMAGE_TAG=$(date +%s)" >> "$GITHUB_ENV"
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Configure appsettings.json
@@ -26,11 +29,11 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${IMAGE_NAME}
+      run: docker build . --file Dockerfile --tag ${IMAGE_NAME}:${IMAGE_TAG}
     - name: Publish the Docker image
-      run: docker push ${IMAGE_NAME}:$(date +%s)
+      run: docker push ${IMAGE_NAME}:${IMAGE_TAG}
   deploy:
-    runs-on: [self-hosted, zdechlak]
+    runs-on: [self-hosted, deploy]
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
